// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a manual legend 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    foo
  </h4>
  <div
    className="tf-legend__list"
  >
    <h1
      id="hello-world"
    >
      Hello World
    </h1>
    

    <p>
      <div
        className="tf-legend__symbol"
        style={
          Object {
            "height": 10,
            "width": 10,
          }
        }
      >
        <svg
          viewBox="0 0 100 100"
        >
          <rect
            fill="red"
            height="100"
            width="100"
            x="0"
            y="0"
          />
        </svg>
      </div>
       foo  
    </p>
    

    <p>
      <div
        className="tf-legend__symbol"
        style={
          Object {
            "height": 10,
            "width": 10,
          }
        }
      >
        <svg
          viewBox="0 0 100 100"
        >
          <rect
            fill="green"
            height="100"
            width="100"
            x="0"
            y="0"
          />
        </svg>
      </div>
       bar  
    </p>
    

    <p>
      <div
        className="tf-legend__symbol"
        style={
          Object {
            "height": 10,
            "width": 10,
          }
        }
      >
        <svg
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="red"
            r="50"
          />
        </svg>
      </div>
       foo  
    </p>
    

    <p>
      <div
        className="tf-legend__symbol"
        style={
          Object {
            "height": 10,
            "width": 10,
          }
        }
      >
        <svg
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="green"
            r="50"
          />
        </svg>
      </div>
       bar  
    </p>
    

  </div>
</div>
`;

exports[`should render correctly circle 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="red"
              r="50"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="green"
              r="50"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="blue"
              r="50"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly square 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <rect
              fill="red"
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <rect
              fill="green"
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <rect
              fill="blue"
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with multi level 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    level1
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <rect
              fill="red"
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        level1.1
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
          style={
            Object {
              "height": 16,
              "width": 16,
            }
          }
        >
          <svg
            viewBox="0 0 100 100"
          >
            <rect
              fill="blue"
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        level1.2
      </div>
    </div>
    <div
      className="tf-legend tf-legend--level-2"
    >
      <h4
        className="tf-legend__title"
      >
        level2
      </h4>
      <div
        className="tf-legend__list"
      >
        <div
          className="tf-legend__item tf-legend__item--square tf-legend__item--left"
        >
          <div
            className="tf-legend__symbol-container"
            style={
              Object {
                "height": 32,
              }
            }
          >
            <div
              className="tf-legend__symbol"
              style={
                Object {
                  "height": 16,
                  "width": 16,
                }
              }
            >
              <svg
                viewBox="0 0 100 100"
              >
                <rect
                  fill="red"
                  height="100"
                  width="100"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
          <div
            className="tf-legend__label"
          >
            level2.1
          </div>
        </div>
        <div
          className="tf-legend__item tf-legend__item--square tf-legend__item--left"
        >
          <div
            className="tf-legend__symbol-container"
            style={
              Object {
                "height": 32,
              }
            }
          >
            <div
              className="tf-legend__symbol"
              style={
                Object {
                  "height": 16,
                  "width": 16,
                }
              }
            >
              <svg
                viewBox="0 0 100 100"
              >
                <rect
                  fill="blue"
                  height="100"
                  width="100"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
          <div
            className="tf-legend__label"
          >
            level2.2
          </div>
        </div>
        <div
          className="tf-legend tf-legend--level-3"
        >
          <h4
            className="tf-legend__title"
          >
            level3
          </h4>
          <div
            className="tf-legend__list"
          >
            <div
              className="tf-legend__item tf-legend__item--square tf-legend__item--left"
            >
              <div
                className="tf-legend__symbol-container"
                style={
                  Object {
                    "height": 32,
                  }
                }
              >
                <div
                  className="tf-legend__symbol"
                  style={
                    Object {
                      "height": 16,
                      "width": 16,
                    }
                  }
                >
                  <svg
                    viewBox="0 0 100 100"
                  >
                    <rect
                      fill="red"
                      height="100"
                      width="100"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="tf-legend__label"
              >
                level3.1
              </div>
            </div>
            <div
              className="tf-legend__item tf-legend__item--square tf-legend__item--left"
            >
              <div
                className="tf-legend__symbol-container"
                style={
                  Object {
                    "height": 32,
                  }
                }
              >
                <div
                  className="tf-legend__symbol"
                  style={
                    Object {
                      "height": 16,
                      "width": 16,
                    }
                  }
                >
                  <svg
                    viewBox="0 0 100 100"
                  >
                    <rect
                      fill="blue"
                      height="100"
                      width="100"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="tf-legend__label"
              >
                level3.2
              </div>
            </div>
            <div
              className="tf-legend tf-legend--level-4"
            >
              <h4
                className="tf-legend__title"
              >
                level4
              </h4>
              <div
                className="tf-legend__list"
              >
                <div
                  className="tf-legend__item tf-legend__item--square tf-legend__item--left"
                >
                  <div
                    className="tf-legend__symbol-container"
                    style={
                      Object {
                        "height": 32,
                      }
                    }
                  >
                    <div
                      className="tf-legend__symbol"
                      style={
                        Object {
                          "height": 16,
                          "width": 16,
                        }
                      }
                    >
                      <svg
                        viewBox="0 0 100 100"
                      >
                        <rect
                          fill="red"
                          height="100"
                          width="100"
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="tf-legend__label"
                  >
                    level4.1
                  </div>
                </div>
                <div
                  className="tf-legend__item tf-legend__item--square tf-legend__item--left"
                >
                  <div
                    className="tf-legend__symbol-container"
                    style={
                      Object {
                        "height": 32,
                      }
                    }
                  >
                    <div
                      className="tf-legend__symbol"
                      style={
                        Object {
                          "height": 16,
                          "width": 16,
                        }
                      }
                    >
                      <svg
                        viewBox="0 0 100 100"
                      >
                        <rect
                          fill="blue"
                          height="100"
                          width="100"
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="tf-legend__label"
                  >
                    level4.2
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
